Fixed Navbar mobile layout bug

--- a/styles.css
+++ b/styles.css
@@ -234,6 +234,7 @@ body {
 
     .navbar-content {
         justify-content: flex-start;
+        width: 90%;
     }
 
     .logo {
